--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-name: Awesome Research Group
-url: http://awesome.example.edu
+name: Beerel Group
+url: http://beerel.usc.edu
 
 exclude: [bibble, README.md, Makefile, screenshot.png]
 
